src/aux-server/aux-web/aux-projector/FileTable/FileTable.css
:root {
    --disabled-cell-color: #f2f2f2;
    --inactive-cell-color: #9d9d9d;
    --file-cell-border-color: #ccc;
    --file-cell-border: 1px solid var(--file-cell-border-color);
}

.file-table-grid {
    display: inline-grid;
    grid-gap: 1px;
    background-color: var(--file-cell-border-color);
    border: var(--file-cell-border);
}

.file-table-grid.columns {
    grid-auto-flow: column;
    grid-auto-columns: fit-content(250px);
}

.file-table-grid.rows {
    grid-auto-flow: row;
}

.file-table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    height: 100%;
}

.file-table .hidden-button {
    margin: 0px 0px 0px 4px;
    text-transform: none;
}

.file-table-container {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.file-cell.header {
    background-color: var(--disabled-cell-color);
    padding: 4px;
    /* border-top: var(--file-cell-border); */
}

.file-section {
    display: inline-block;
    margin: 1px 1px 1px 0px;
    /* border-top: var(--file-cell-border); */
}

.file-section.active {
    text-transform: none;
    background-color: var(--disabled-cell-color);
    padding: 1px;
    display: inline-block;
    border-radius: 3px;
    font-size: 11px !important;
    min-width: 30px;
    height: 25px;
    /* border-top: var(--file-cell-border); */
}

.file-section.inactive {
    text-transform: none;
    background-color: var(--inactive-cell-color);
    padding: 1px;
    display: inline-block;
    border-radius: 3px;
    font-size: 11px !important;
    min-width: 30px;
    height: 25px;
    /* border-top: var(--file-cell-border); */
}

.file-section-holder-outer {
    height: 40px;
    width: 100%;
    padding-top: 3px;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
}

.file-section-holder-inner {
    white-space: nowrap;
}

.file-cell.id {
    font-weight: 700;
    overflow-x: hidden;
    white-space: nowrap;
    cursor: pointer;
}

.file-cell.remove-item {
    text-align: center;
    background-color: var(--disabled-cell-color);
}

.file-cell.remove-item .md-button {
    margin: 0;
}

.file-cell.delete-item {
    text-align: center;
    background-color: var(--disabled-cell-color);
}

.file-cell.delete-item .md-button {
    margin: 0;
    vertical-align: initial;
    height: 100%;
}

.delete-file-icon {
    font-size: 1.3rem !important;
}

.file-cell input {
    width: 100%;
    height: 100%;
    padding: 2px;
    border: none;
}

.file-cell.new-tag {
    text-align: center;
    background-color: var(--disabled-cell-color);
}

.file-cell.new-tag .md-button {
    margin: 0;
    width: 100%;
}

.file-cell.new-tag picture,
.file-cell.new-tag img {
    width: 24px;
    height: 24px;
}

.remove-tag.md-button {
    width: 24px;
    min-width: 24px;
    height: 24px;
    margin: 0;
}

.remove-tag .md-icon {
    font-size: 16px !important;
}

.remove-tag .md-icon:hover {
    cursor: pointer;
}

.add-button-cell {
    display: none;
}

.has-add-button .add-button-cell {
    display: table-cell;
}

th:last-child {
    border-right: 1px solid rgba(0, 0, 0, 0.2);
}

.has-add-button th:last-child {
    border-right: none;
    border-top: none;
    background-color: #fff;
}

.file-table .top-part {
    margin-bottom: 16px;
}

.file-table-actions {
    text-align: right;
    min-width: 200px;
    flex: 1;
}

.file-table-actions .new-tag-button {
    text-transform: none;
}

.file-table-actions .finish-tag-button {
    text-transform: none;
    margin: 0;
}

.finish-tag-button-wrapper {
    display: inline-block;
}

.top-part {
    display: flex;
    flex-grow: 0;
}

.file-table-toggle-buttons {
    flex: 2;
}

.file-table-actions .tag-editor .md-field {
    margin: 0;
    padding-top: 0;
    min-height: 32px;
}

.file-table-actions .md-button .md-icon.done {
    color: #13bd13b4;
}

.file-table-actions .file-table-form {
    height: 100%;
    display: flex;
    flex: 1;
    flex-direction: row;
    align-items: center;
    padding-left: 10px;
}

.file-table-wrapper {
    width: 100%;
    max-height: 354px;
    overflow: auto;
    padding-left: 10px;
    flex: 1 0 auto;
}

.tag-value-editor-wrapper {
    flex: 1 1 auto;
}

.no-search-results-message {
    text-align: center;
    flex: 1;
}

.no-files-message {
    text-align: center;
    padding: 0 16px;

    flex: 1;
}

.search-field {
    margin-top: 0;
    margin-left: 8px;
}

.search-results-wrapper {
    padding: 0 8px;
    flex: 1;
}

.md-button.create-file .md-button-content {
    width: 24px;
    height: 24px;
}

.create-surface svg {
    color: #888;
}

.md-checkbox {
    display: flex;
}

